# EDAplot

./: .dockerignore  .pre-commit-config.yaml  README.md  frontend.Dockerfile  pyproject.toml  requirements-frontend.txt
benchmark/: benchmark_utils.py  datasets.py  lida_self_eval.py  metrics.py  request_analyzer_benchmark.py  vega_chat_benchmark.py  vision_judge.py  vision_judge_benchmark.py
benchmark/evals/: eval_checks.py  eval_runner.py  eval_types.py
benchmark/models/: base_models.py  coml4vis.py  eval_models.py  lida.py  utils.py  vega_chat.py
benchmark/reports/: evals_report.py  report_utils.py  request_analyzer_benchmark_report.py  vega_chat_benchmark_report.py  vision_judge_benchmark_report.py
dataset/nlv_corpus/: README.md  vlSpecs.json
edaplot/: api.py  app_state.py  data_prompts.py  data_utils.py  image_utils.py  prompt_utils.py  spec_utils.py  vega.py
edaplot/recommend/: prompts.py  recommender.py
edaplot/request_analyzer/: header_analyzer.py  request_analyzer.py
edaplot/vega_chat/: prompts.py  vega_chat.py
frontend/: app.py  plotting.py  vega_chat.py
scripts/: data_prompt_tokens.py  run_benchmark.py  run_eval_checks.py  run_lida_self_eval.py  run_request_analyzer_benchmark.py  run_vision_judge.py  run_vision_judge_benchmark.py  update_parsed_outputs.py
tests/: common.py  test_data_prompts.py  test_data_utils.py  test_datasets.py  test_evals.py  test_image_utils.py  test_metrics.py  test_paths.py  test_spec_utils.py  test_vega.py  test_vega_prompts.py  test_vision_judge.py
tests/resources/evals/: 0_histogram.yaml  0_scatter.yaml  1_transform_celsius.yaml  1_transform_date_1.yaml  1_transform_date_2.yaml  1_transform_date_3.yaml  1_transform_filter_1.yaml  1_transform_filter_2.yaml  1_transform_filter_3.yaml  1_transform_keep_1.yaml  1_transform_keep_2.yaml  1_transform_median.yaml  2_colors_1.yaml  2_colors_2.yaml  2_colors_3.yaml  2_colors_4.yaml  3_normalize_1.yaml  3_normalize_2.yaml  3_normalize_3.yaml  3_normalize_4.yaml  4_request_analyzer_1.yaml  4_request_analyzer_2.yaml  4_request_analyzer_3.yaml  5_header_analyzer_1.yaml  5_header_analyzer_2.yaml
tests/resources/metrics/: 00.hyp  00.metrics  00.ref  01.hyp  01.metrics  01.ref  02.hyp  02.metrics  02.ref
tests/resources/specs/: fix0_faceting_1.yaml  fix0_interactive_1.yaml  fix1_colors_1.yaml  fix1_colors_2.yaml  fix1_colors_3.yaml  fix1_correct_1.yaml  fix1_correct_2.yaml  fix1_correct_3.yaml  fix1_correct_4.yaml  fix1_faceting_1.yaml  fix1_faceting_2.yaml  fix1_filter_dates_1.yaml  fix1_filter_dates_2.yaml  fix1_filter_dates_3.yaml  fix1_filter_dates_4.yaml  fix1_filter_dates_5.yaml  fix1_filter_dates_6.yaml  fix1_filter_dates_7.yaml  fix1_scale_1.yaml  fix_restore_fields_1.yaml  fix_restore_fields_2.yaml  fix_restore_fields_3.yaml  fix_transform_calculate_1.yaml  fix_transform_calculate_2.yaml  (+11 more)
(+2 files in other folders)
